org.mmisw.ont - Ontology and Term URI resolver 
Carlos Rueda - MMI / MBARI
$Id$

ChangeLog

2009-06-03 -  version 1.2.2.beta
	- UnversionedConverter: Disabled the alteration of attribute values, so the contents 
	  of the unversioned ontology will be exactly as that of the versioned ontology.
	  TODO: we still need to determine the mechanism to explicitly indicate that the 
	  "unversioned" response is an unversioned form of the corresponding latest version.
	  
2009-05-31
	- listall: include o.ontology_id

2009-05-24
	- listall: order by o.ontology_id, o.version_number.  The ontology URIs are shown in
	  versioned form.
	
2009-05-23
	- Omv: added: usedOntologyEngineeringTool
	- OmvMmi: added: voc2rdf, vine
	
	  
2009-05-22
	MisDispatcher: include username in listall response.
	
2009-05-21
	- DotGenerator now ignores owl:Thing to reduce cluttering the diagram
	- New DotGeneratorProgram with a main program to exercise DotGenerator.
	
2009-05-20
	- DotGenerator: no dependency on base URI--always use local name of RDFNode
	  TODO: handle (potentially) different namespaces.
	  
2009-05-14
	- MiscDispatcher.listForPortal: List all entries for use by the iserver

2009-05-13
	- UriResolver2: resolving HTML by redirecting to OntMd service
	
	- MiscDispatcher.resolveGetCsv: resolve unversioned request
	
2009-05-12
	Refactoring:
	- new OntServlet as main entry point and as a preparation to start refactoring of UriResolver
	- new UriResolver2 as a support for the incremental refactoring
	- UriResolver2: preliminary dispatch;
	- OntServlet: calls uriResolver2 (and not uriResolver) if special developer parameter "ur2" is included in the request.
	
2009-05-11
	- Added config property: aquaportal.voc2rdf.dir
	- Added internal operation _csv to provide the CSV contents of an ontology
	- TODO remove the "_lpath" operation in "Ont"
	
	
2009-05-08
	- if the "uri" parameter is included, resolve by the given URI, which is done 